--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,15 +11,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v5
       with:
-        go-version: 1.15
+        go-version: '1.25.4'
 
     - name: Build
-      run: go build -v .
+      run: go build -v ./cmd/nara
 
 #    - name: Test
 #      run: go test -v ./...
