--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,3 +42,14 @@ jobs:
           
           docker push $IMAGE_ID:latest
           docker push $IMAGE_ID:${{ github.sha }}
+
+      - name: Install Flyctl
+        uses: superfly/flyctl-actions/setup-flyctl@v1
+
+      - name: Deploy to Fly
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        run: |
+          IMAGE_ID=ghcr.io/${{ github.repository }}
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          fly deploy --image $IMAGE_ID:${{ github.sha }} --remote-only
