--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "url": "https://github.com/eljojo/nara/issues"
   },
   "homepage": "https://github.com/eljojo/nara#readme",
+  "workspaces": [
+    "docs"
+  ],
   "dependencies": {
     "d3": "^7.9.0",
     "dayjs": "^1.11.19",
@@ -31,6 +34,8 @@
     "preact": "^10.28.2"
   },
   "devDependencies": {
+    "@astrojs/starlight": "^0.24.1",
+    "astro": "^4.15.0",
     "esbuild": "^0.27.2"
   }
 }
