--- a/docs/package.json
+++ b/docs/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "nara-docs",
-  "private": true,
+  "name": "docs",
   "type": "module",
+  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.24.1",
-    "astro": "^4.15.0"
+    "@astrojs/starlight": "^0.37.2",
+    "astro": "^5.6.1",
+    "sharp": "^0.34.2"
   }
 }
