--- a/docs/package.json
+++ b/docs/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.2",
+    "@astrojs/preact": "^4.0.8",
     "@astrojs/starlight": "^0.37.2",
     "astro": "^5.6.1",
+    "preact": "^10.26.7",
     "sharp": "^0.34.2"
   }
 }
