--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "docs"
   ],
   "dependencies": {
+    "astro-mermaid": "^1.2.0",
     "d3": "^7.9.0",
     "dayjs": "^1.11.19",
     "iconoir": "^7.11.0",
+    "mermaid": "^11.12.2",
     "preact": "^10.28.2"
   },
   "devDependencies": {
